# my-macros

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  conanfile.py  requirements.txt
db/: my-macro.sql
src/: CMakeLists.txt  MyFrame.cpp  MyFrame.h  MyMacroApp.cpp  MyMacroApp.h  WxApp.cpp  WxApp.h
src/model/: DailyModel.cpp  DailyModel.h  Db.cpp  Db.h  DbBase.cpp  DbBase.h  DbDaily.cpp  DbDaily.h  DbFood.cpp  DbFood.h  DbRecipe.cpp  DbRecipe.h  FatSecretModel.cpp  FatSecretModel.h  FatSecretWrapper.cpp  FatSecretWrapper.h  FoodCommonModel.cpp  FoodEditModel.cpp  FoodEditModel.h  FoodListModel.cpp  FoodListModel.h  FoodModel.cpp  FoodModel.h  MyMacroTypes.h  OutlookModel.cpp  OutlookModel.h  RecipeListModel.cpp  RecipeListModel.h  RecipeModel.cpp  RecipeModel.h  Transformer.cpp  Transformer.h
src/model/db/: DbBase.cpp  DbBase.h  DbDaily.cpp  DbDaily.h  DbFood.cpp  DbFood.h  DbGoal.cpp  DbGoal.h  DbRecipe.cpp  DbRecipe.h
src/model/fatsecret/: CurlWrapper.cpp  CurlWrapper.h  FatSecretJson.cpp  FatSecretJson.h  FatSecretModel.cpp  FatSecretModel.h  FatSecretWrapper.cpp  FatSecretWrapper.h  TokenJson.cpp  TokenJson.h  Transformer.cpp  Transformer.h
src/model/food/: FoodCommonModel.h  FoodEditModel.cpp  FoodEditModel.h  FoodListModel.cpp  FoodListModel.h  FoodModel.cpp  FoodModel.h
src/model/recipe/: RecipeCommonModel.cpp  RecipeCommonModel.h  RecipeEditModel.cpp  RecipeEditModel.h  RecipeListModel.cpp  RecipeListModel.h  RecipeModel.cpp  RecipeModel.h
src/presenter/: DailyPresenter.cpp  DailyPresenter.h  FatSecretPresenter.cpp  FatSecretPresenter.h  FoodEditPresenter.cpp  FoodEditPresenter.h  FoodListPresenter.cpp  FoodListPresenter.h  FoodPresenter.cpp  FoodPresenter.h  GoalPresenter.cpp  GoalPresenter.h  MacroCalculator.cpp  MacroCalculator.h  OutlookHelper.cpp  OutlookHelper.h  OutlookPresenter.cpp  OutlookPresenter.h  RecipeEditPresenter.cpp  RecipeEditPresenter.h  RecipeListPresenter.cpp  RecipeListPresenter.h  RecipePresenter.cpp  RecipePresenter.h  TimeHelper.cpp  TimeHelper.h  WeightLossProjector.cpp  WeightLossProjector.h
src/view/: DailyView.cpp  DailyView.h  ExplorerNotebook.cpp  ExplorerNotebook.h  FatSecretView.cpp  FatSecretView.h  FoodItemEditView.cpp  FoodItemEditView.h  FoodItemView.cpp  FoodItemView.h  FoodListView.cpp  FoodListView.h  FoodView.cpp  FoodView.h  GoalView.cpp  GoalView.h  IOutlookView.h  MainNotebook.cpp  MainNotebook.h  OneOffDialog.cpp  OneOffDialog.h  OutlookView.cpp  OutlookView.h  RecipeEditView.cpp  RecipeEditView.h  RecipeItemView.cpp  RecipeItemView.h  RecipeListView.cpp  RecipeListView.h  TopDailyView.cpp  TopDailyView.h  TopFoodView.cpp  TopFoodView.h  TopRecipeView.cpp  TopRecipeView.h
test/: CMakeLists.txt  OutlookPresenterTest.cpp  WeightLossProjectorTest.cpp
